name:                elmsweeper
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
license:             MIT
license-file:        LICENSE
category:            Web
build-type:          Simple

cabal-version:       >=1.10

executable elmsweeper
  main-is:             Main.hs
  build-depends:       base, vector, MonadRandom, base-unicode-symbols
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/elmsweeper
